Fix for android top bar clip

--- a/NPKCalculator/npkStyle.css
+++ b/NPKCalculator/npkStyle.css
@@ -17,7 +17,7 @@ nav ul {
 
 nav li {
   display: inline;
-  margin: 0px 15px 0px 15px;
+  margin: 0px 10px 0px 10px;
 }
 
 nav a {
@@ -62,10 +62,6 @@ body {
   float: right;
 }
 
-.form-control {
-  padding: 5px 0px 5px 2px;
-}
-
 img {
   height: 25px;
 }
@@ -93,9 +89,18 @@ label {
   font-weight: bold;
 }
 
-input[type="number"] {
+input {
   width: 100%;
   padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+select {
+  width: 100%;
+  padding: 10px 0px 10px 0px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
