--- a/style.css
+++ b/style.css
@@ -71,5 +71,20 @@ img {
 }
 
 p {
-  font-size: 20px;
+  font-size: 16px;
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+div {
+  width: inherit;
+  max-width: 400px;
+  margin: 0 auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
