--- a/style.css
+++ b/style.css
@@ -9,10 +9,15 @@ header {
   padding: 12px 0px 12px 0px;
 }
 
-nav ul {
+.navul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.navlist {
+  display: inline;
+  margin: 0px 10px 0px 10px;
 }
 
 nav li {
@@ -92,4 +97,26 @@ div {
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  list-style: none;
+  padding: 0;
+  background-color: #519653;
+}
+
+.dropdown-content li {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.navul .left:hover .dropdown-content {
+  display: block;
 }
