Made dropdown menu for touchscreen

--- a/soilcalculator/npkStyle.css
+++ b/soilcalculator/npkStyle.css
@@ -9,10 +9,15 @@ header {
   padding: 12px 0px 12px 0px;
 }
 
-nav ul {
+.navul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.navlist {
+  display: inline;
+  margin: 0px 10px 0px 10px;
 }
 
 nav li {
@@ -32,6 +37,7 @@ nav a {
 nav a:hover {
   color: #ff9900;
 }
+
 .cta-button {
   display: inline-block;
   background-color: #ff9900;
@@ -172,4 +178,22 @@ input[type="submit"] {
 img {
   width: 100%;
   height: 100%;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #519653;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  list-style: none;
+  padding: 0;
+}
+
+.dropdown-content li {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  color: white;
 }
