--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ nav a {
 nav a:hover {
   color: #ff9900;
 }
+
 .cta-button {
   display: inline-block;
   background-color: #ff9900;
@@ -102,21 +103,17 @@ div {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #519653;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   list-style: none;
   padding: 0;
-  background-color: #519653;
 }
 
 .dropdown-content li {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-}
-
-.navul .left:hover .dropdown-content {
-  display: block;
+  color: white;
 }
